infrastructure/k8s/apps/coffeeshop/overlays/iximiuz-orders/workload-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  namespace: coffeeshop
spec:
  template:
    spec:
      containers:
        - name: counter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barista
  namespace: coffeeshop
spec:
  template:
    spec:
      containers:
        - name: barista
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen
  namespace: coffeeshop
spec:
  template:
    spec:
      containers:
        - name: kitchen
