infrastructure/k8s/apps/coffeeshop/overlays/iximiuz-orders/exclude-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: coffeeshop
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: coffeeshop
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: coffeeshop
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: coffeeshop
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: coffeeshop
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: coffeeshop
$patch: delete
